Project/p4/tests/t038.err
Semantic error on line 4: Variable 'a' is an array.
Semantic error on line 5: Variable 'a' is an array.
