Project/p4/tests/t038.gpl
// make sure you don't stop parsing on the first error
// this program should issue TWO errors
int a[10];
int b = a;
int c = a;
